--- a/bot-configuration-default.json
+++ b/bot-configuration-default.json
@@ -1,4 +1,5 @@
 {
     "botToken": "token goes here",
-    "clientId": "client ID goes here"
+    "clientId": "client ID goes here",
+    "callSign": "call sign goes here"
 }
