--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "dbot",
-  "version": "0.0.0",
-  "description": "A test bot for discord.",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "author": "Jure Bericic",
-  "license": "MIT",
-  "dependencies": {
-    "chai": "^4.1.2",
-    "discord.js": "^11.4.2"
-  },
-  "devDependencies": {
-    "mocha": "^5.2.0"
-  }
+    "name": "dbot",
+    "version": "0.0.0",
+    "description": "A test bot for discord.",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha"
+    },
+    "author": "Jure Bericic",
+    "license": "MIT",
+    "dependencies": {
+        "discord.js": "^11.4.2"
+    },
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "mocha": "^5.2.0",
+        "sinon": "^6.3.4"
+    }
 }
