--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "discord.js": "^11.4.2"
     },
     "devDependencies": {
+        "ajv": "^6.5.3",
         "chai": "^4.1.2",
         "mocha": "^5.2.0",
         "sinon": "^6.3.4"
