--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "A test bot for discord.",
     "main": "index.js",
     "scripts": {
-        "test": "mocha"
+        "test": "mocha",
+        "lint:js": "jshint index.js src test --verbose"
     },
     "author": "Jure Bericic",
     "license": "MIT",
@@ -14,6 +15,7 @@
     "devDependencies": {
         "ajv": "^6.5.3",
         "chai": "^4.1.2",
+        "jshint": "^2.9.6",
         "mocha": "^5.2.0",
         "sinon": "^6.3.4"
     }
