Added remote administration module.

--- a/bot-configuration-default.json
+++ b/bot-configuration-default.json
@@ -4,5 +4,8 @@
     "callSign": "@mention",
     "loadOnStart": [
         "demo-module"
+    ],
+    "admins": [
+        "admin's snowflake goes here"
     ]
 }
