--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "chai": "^4.1.2",
         "jshint": "^2.9.6",
         "mocha": "^5.2.0",
+        "rewire": "^4.0.1",
         "sinon": "^6.3.4"
     }
 }
